--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+
+ "tsconfig": {
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+      "outDir": "build"
+    },
+    "include": ["src/**/*"]
+  },
+
+
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -27,4 +37,5 @@
     "gh-pages": "^6.1.0",
     "vite": "^5.0.0"
   }
+  
 }
