--- a/package.json
+++ b/package.json
@@ -6,22 +6,12 @@
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-
- "tsconfig": {
-    "extends": "./tsconfig.json",
-    "compilerOptions": {
-      "outDir": "build"
-    },
-    "include": ["src/**/*"]
-  },
-
-
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -37,5 +27,4 @@
     "gh-pages": "^6.1.0",
     "vite": "^5.0.0"
   }
-  
 }
