--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "githubpractice",
    "version": "0.0.0",
-   "homepage": "https://mybabb.github.io/githubpractice/",
+   "homepage": "https://mybabb.github.io/githubpractice  /",
   "private": true,
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
