--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "githubpractice",
+  "homepage": "https://mybabb.github.io/githubpractice/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+
+    "start: react": "react-scripts start",
+    "predeploy": "npm run build",              
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -21,6 +26,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.1.0",
     "vite": "^5.0.0"
   }
 }
