--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
+    "serve": "npm run build && vite preview",
     "preview": "vite preview"
+    
   },
-  "devDependencies": {
+    "devDependencies": {
     "gh-pages": "^6.1.0",
     "vite": "^5.0.0"
   }
